--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,2 @@
 # These are supported funding model platforms
-
-github: # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, user2]
-github: [Mohammad-Abbasi2559]
+custom: ['BitcoinWallet//3JSrtX7TEoukkiHn1PXSboWMLSDB1mwEoh', 'USDTWallet//TEswDf7RMK3cMAvPKddNVEQDXYjgYWkPeJ', 'https://payping.ir/@Mohammad-abbasi2559']
